style: modify the titles of some file in '操作系统' dir.

--- a/数据结构/chp7/关于几个平衡搜索树的深入探讨.md
+++ b/数据结构/chp7/关于几个平衡搜索树的深入探讨.md
@@ -23,7 +23,7 @@ $$
 
 ## AVL树
 
-> 高度为h的AVL树，至少拥有`fib(h + 3) - 1`个节点，此时对应了一棵`fib-AVL`数。
+> 高度为h的AVL树，至少拥有`fib(h + 3) - 1`个节点，此时对应了一棵`fib-AVL`树。
 
 可以归纳地证明该结论。
 
